--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "mongoose-slug-updater": "^3.3.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
