--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-handlebars": "^6.0.7",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-updater": "^3.3.0"
   },
   "devDependencies": {
